--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
 body {
-  font-family: 'Epilogue', sans-serif;
-  background-color: #fafafa;
+  font-family: "Epilogue", sans-serif;
+  background-color: hsl(0, 0%, 98%);
 }
 
 a {
@@ -13,18 +13,13 @@ header {
   width: 100%;
   padding-top: 1rem;
 }
-
 header h1 {
   display: inline;
   padding-left: 2rem;
 }
-
 header div {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
 }
-
 header .all {
   display: inline;
 }
@@ -35,29 +30,20 @@ header .all {
 }
 
 .features {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding-right: .8rem;
+  flex-direction: column;
+  padding-right: 0.8rem;
 }
-
 .features #features-button:hover {
-  color: #141414;
+  color: hsl(0, 0%, 8%);
   cursor: pointer;
 }
 
 #features-content {
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-items: flex-start;
   position: relative;
   left: -1.5rem;
 }
-
 #features-content img {
   width: 14%;
   padding-top: 2px;
@@ -65,10 +51,11 @@ header .all {
 }
 
 .none1 {
-  display: -ms-grid;
   display: grid;
-  -webkit-transition: 1;
-  transition: 1;
+}
+
+.none2 {
+  display: none;
 }
 
 .none {
@@ -76,24 +63,16 @@ header .all {
 }
 
 #features-button {
-  -ms-flex-item-align: self-end;
-      -ms-grid-row-align: self-end;
-      align-self: self-end;
+  align-self: self-end;
 }
 
 .company {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   padding-right: 2rem;
 }
-
 .company #company-button:hover {
-  color: #141414;
+  color: hsl(0, 0%, 8%);
 }
 
 #company-content, #features-content {
@@ -102,15 +81,11 @@ header .all {
   border-radius: 10px;
   padding: 1rem;
   z-index: 1;
-  -webkit-transition: 3s ease-in;
-  transition: 3s ease-in;
-  -webkit-box-shadow: 0 8px 8px 0 rgba(20, 20, 20, 0.15), 0 6px 18px 0 rgba(20, 20, 20, 0.15);
-          box-shadow: 0 8px 8px 0 rgba(20, 20, 20, 0.15), 0 6px 18px 0 rgba(20, 20, 20, 0.15);
+  box-shadow: 0 8px 8px 0 rgba(20, 20, 20, 0.15), 0 6px 18px 0 rgba(20, 20, 20, 0.15);
 }
-
 #company-content a, #features-content a {
-  font-size: .8rem;
-  padding: .4rem;
+  font-size: 0.8rem;
+  padding: 0.4rem;
 }
 
 .icon-arrow-down, .icon-arrow-up {
@@ -120,7 +95,7 @@ header .all {
 
 #features-button,
 #company-button {
-  color: dimgray;
+  color: hsl(0, 0%, 41%);
   border: none;
   background-color: inherit;
   font-size: inherit;
@@ -136,62 +111,51 @@ header .all {
 .c-and-a {
   display: inline;
 }
-
 .c-and-a a {
-  color: dimgray;
+  color: hsl(0, 0%, 41%);
 }
-
 .c-and-a a:hover {
-  color: #141414;
+  color: hsl(0, 0%, 8%);
 }
 
 .l-and-r {
   float: right;
   display: inline;
+  padding-top: 0.7rem;
 }
-
 .l-and-r a {
-  color: dimgray;
+  color: hsl(0, 0%, 41%);
 }
-
 .l-and-r a:hover {
   cursor: pointer;
-  color: #141414;
+  color: hsl(0, 0%, 8%);
 }
-
 .l-and-r .register:hover {
-  border: 2px solid #141414;
+  border: 2px solid hsl(0, 0%, 8%);
 }
 
 .register {
-  border: 2px solid dimgray;
+  border: 2px solid hsl(0, 0%, 41%);
   border-radius: 15px;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   margin-right: 2rem;
 }
 
 .login {
   padding-right: 2.5rem;
-  padding-top: .5rem;
+  padding-top: 0.5rem;
 }
 
 .main {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
-
 .main img {
   width: 30%;
   position: relative;
   top: -7rem;
   right: 8rem;
 }
-
 .main .image-hero-mobile {
   display: none;
 }
@@ -200,50 +164,41 @@ header .all {
   padding-left: 10rem;
   width: 80%;
 }
-
 .main-text h1 {
   font-size: 4.5rem;
-  margin-top: .4rem;
+  margin-top: 0.4rem;
 }
-
 .main-text p {
-  color: dimgray;
+  color: hsl(0, 0%, 41%);
   line-height: 1.5rem;
 }
-
 .main-text p:nth-child(3) {
   margin: 3rem 0rem 5rem 0rem;
 }
-
 .main-text .logos {
   width: 100%;
 }
-
 .main-text .logos img {
   position: inherit;
   display: inline;
   padding-right: 2rem;
   width: 10%;
 }
-
 .main-text .logos .client-audiophile {
   width: 6%;
 }
-
 .main-text .learn-more {
-  border: 1px solid #141414;
-  background-color: #141414;
+  border: 1px solid hsl(0, 0%, 8%);
+  background-color: hsl(0, 0%, 8%);
   border-radius: 15px;
   width: -moz-fit-content;
-  width: -webkit-fit-content;
   width: fit-content;
-  padding: .5rem 1rem;
-  color: #fafafa;
+  padding: 0.5rem 1rem;
+  color: hsl(0, 0%, 98%);
 }
-
 .main-text .learn-more:hover {
-  color: #141414;
-  background-color: #fafafa;
+  color: hsl(0, 0%, 8%);
+  background-color: hsl(0, 0%, 98%);
   cursor: pointer;
 }
 
@@ -253,7 +208,7 @@ header .all {
 }
 
 .attribution a {
-  color: #3e52a3;
+  color: hsl(228, 45%, 44%);
 }
 
 @media screen and (max-width: 1100px) {
@@ -269,10 +224,10 @@ header .all {
   }
   .header #icon-menu-button {
     float: right;
-    padding-top: .7rem;
+    padding-top: 0.7rem;
     padding-right: 1.2rem;
     border: none;
-    background-color: #fafafa;
+    background-color: hsl(0, 0%, 98%);
   }
   .header h1 {
     font-size: 2.5rem;
@@ -287,8 +242,6 @@ header .all {
     background-color: white;
     top: 0;
     right: 0;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
     width: 0%;
   }
   .all #icon-close-menu-button {
@@ -317,14 +270,13 @@ header .all {
     width: 5%;
   }
   .all #features-content, .all #company-content {
-    -webkit-box-shadow: none;
-            box-shadow: none;
+    box-shadow: none;
     padding-left: 1rem;
     border-radius: 0;
   }
   .all #features-content a, .all #company-content a {
     font-size: 1rem;
-    color: dimgray;
+    color: hsl(0, 0%, 41%);
   }
   .all #company-button {
     padding-top: 1rem;
@@ -334,7 +286,6 @@ header .all {
   }
   .all .none1 {
     visibility: visible;
-    display: -ms-grid;
     display: grid;
   }
   .all .none {
@@ -347,7 +298,7 @@ header .all {
     padding-top: 1rem;
   }
   .all .c-and-a .about {
-    padding-top: .5rem;
+    padding-top: 0.5rem;
   }
   .all .c-and-a a {
     display: list-item;
@@ -358,6 +309,8 @@ header .all {
   .all .l-and-r {
     float: none;
     text-align: center;
+    position: relative;
+    top: 6rem;
   }
   .all .l-and-r a {
     display: list-item;
@@ -368,18 +321,13 @@ header .all {
     padding-left: 1rem;
   }
   .all .l-and-r .register {
-    margin: 0rem 2rem 0rem .6rem;
-    padding: .8rem;
+    margin: 0rem 2rem 0rem 0.6rem;
+    padding: 0.8rem;
   }
   .main {
     width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .main .image-hero-desktop {
     display: none;
@@ -395,7 +343,7 @@ header .all {
     margin-left: 38%;
   }
   .main .logos {
-    margin: 2.5rem 0rem 0rem .6rem;
+    margin: 2.5rem 0rem 0rem 0.6rem;
     overflow: hidden;
   }
   .main .logos img {
@@ -420,8 +368,6 @@ header .all {
     margin: 1rem;
   }
   .learn-more {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     justify-self: center;
     margin-top: 2rem;
@@ -429,5 +375,4 @@ header .all {
   .attribution {
     padding-top: 6rem;
   }
-}
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
